attempt to fix z fighting

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-mod_id=example
-mod_name=Forge Mixin Example
+mod_id=stripelands
+mod_name=StripelandsSummoner
 mod_group=com.yourname.modid
-mod_version=1.0.0
+mod_version=1.0.3
 mod_author=["YourName"]
 mod_description=A example mod.
 minecraft_version=1.12.2
@@ -10,5 +10,7 @@ mappings_channel=snapshot
 mappings_version=20180814-1.12
 mod_core_plugin=${mod_group}.core.CoreMod
 mod_mixin_configs=mixins.${mod_id}.json
+# Gradle stuff
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx3G
+org.gradle.java.home=C:/users/micha/jdk8u292-b10
