--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,10 @@ mod_version=1.0.5
 mod_author=["YourName"]
 mod_description=A example mod.
 minecraft_version=1.12.2
-forge_version=14.23.5.2855
+forge_version=14.23.5.2860
 mappings_channel=snapshot
 mappings_version=20180814-1.12
-mod_core_plugin=${mod_group}.core.CoreMod
+mod_core_plugin=com.yourname.modid.core.CoreMod
 mod_mixin_configs=mixins.${mod_id}.json
 # Gradle stuff
 org.gradle.daemon=false
